Fix search button on IE11
https://github.com/department-of-veterans-affairs/va.gov-team/issues/12972

--- a/src/applications/facility-locator/sass/facility-locator.scss
+++ b/src/applications/facility-locator/sass/facility-locator.scss
@@ -366,7 +366,8 @@ $facility-locator-color-gray: #ccc;
         margin-top: 0;
 
         @media(min-width: $small-desktop-screen) {
-          margin-top: 2.5rem;
+          margin-top: 27px;
+          min-width: 67px;
           width: auto;
         }
       }
